# smenu

./: Cargo.toml
src/: default.toml  main.rs
