[package]
name = "smenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
nix = { version = "0.26.1", features = ["ioctl"] }
serde = { version = "1.0.150", features = ["serde_derive"] }
sgui = { git = "https://github.com/R-ARM/sgui.git", version = "0.1.0" }
toml = "0.5.10"
